--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/mocha --require babel-polyfill --compilers js:babel-register --recursive",
-    "test:watch": "./node_modules/.bin/mocha --require babel-polyfill --compilers js:babel-register --recursive --reporter nyan -w",
-    "build": "rm -rf ./build && NODE_ENV=\"production\" webpack -p --progress --colors",
+    "serve": "npm run build && ./node_modules/.bin/babel server/src -d server/lib && node server/lib/index.js",
+    "build": "rm -rf ./build && NODE_ENV=\"production\" webpack -p",
     "start:dev": "NODE_ENV=\"development\" ./node_modules/webpack-dashboard/bin/webpack-dashboard.js -t 'Preview Mode - React-Redux Boilerplate' -- ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "start:devblind": "NODE_ENV=\"development\" ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "hook-add": "prepush install",
@@ -33,7 +32,6 @@
     "chai-as-promised": "^6.0.0",
     "compression-webpack-plugin": "^0.4.0",
     "css-loader": "^0.28.0",
-    "enzyme": "^2.8.2",
     "eslint": "^3.10.1",
     "eslint-config-airbnb": "^14.1.0",
     "eslint-plugin-import": "^2.2.0",
@@ -45,7 +43,6 @@
     "jsdom": "^9.12.0",
     "mocha": "^3.2.0",
     "mocha-webpack": "^0.7.0",
-    "node-sass": "^4.5.2",
     "postcss-loader": "^1.3.3",
     "prepush": "^3.1.11",
     "react-addons-test-utils": "^15.5.1",
@@ -54,7 +51,6 @@
     "redux-devtools-log-monitor": "^1.1.1",
     "redux-logger": "^3.0.1",
     "sass-loader": "^6.0.3",
-    "sinon": "^2.1.0",
     "style-loader": "^0.16.1",
     "svg-react-loader": "^0.3.7",
     "uglifyjs-webpack-plugin": "^0.4.3",
@@ -69,12 +65,13 @@
     "babel-cli": "^6.24.1",
     "babel-polyfill": "^6.23.0",
     "babel-preset-stage-2": "^6.24.1",
-    "circular-json": "^0.3.1",
     "es6-promise": "^4.1.0",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "material-ui": "^0.17.4",
     "moment": "^2.18.1",
+    "morgan": "^1.8.1",
+    "node-sass": "^4.5.2",
     "path": "^0.12.7",
     "postcss-cssnext": "^2.10.0",
     "postcss-import": "^9.1.0",
@@ -91,9 +88,7 @@
     "react-tap-event-plugin": "^2.0.1",
     "redux": "^3.3.1",
     "redux-thunk": "^2.0.1",
-    "superagent": "^3.5.2",
-    "tinycolor2": "^1.4.1",
-    "vanilla-masker": "^1.1.1"
+    "superagent": "^3.5.2"
   },
   "description": "Boilerplate for React, Redux, Webpack 2, React-Router, etc.",
   "keywords": [
